--- a/BootWeb2/src/main/resources/templates/getBoard.html
+++ b/BootWeb2/src/main/resources/templates/getBoard.html
@@ -26,14 +26,14 @@
 					</tr>
 					<tr>
 						<td>작성일</td>
-						<td th:text="${board.createDate }"></td>
+						<td th:text="${#dates.format(board.createDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
 					</tr>
 					<tr>
 						<td>조회수</td>
 						<td th:text="${board.cnt }"></td>
 					</tr>
 					<tr>
-						<td colspan="2">
+						<td colspan="2" align="center">
 						<button type="submit">수정</button>
 						<a th:href="@{/deleteBoard(seq=${board.seq})}" onclick='return confirm("정말로 삭제 하시겠습니까?")'><button type="button">삭제</button></a>
 						<a th:href="@{/getBoardList}"><button type="button">목록</button></a></td>
