--- a/BootWeb2/src/main/resources/templates/getBoardList.html
+++ b/BootWeb2/src/main/resources/templates/getBoardList.html
@@ -25,7 +25,7 @@
 						   th:text="${board.title}"></a>
 					</td>
 					<td th:text="${board.writer}"></td>
-					<td th:text="${board.createDate}"></td>
+					<td th:text="${#dates.format(board.createDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
 					<td th:text="${board.cnt}"></td>
 				</tr>
 			</tbody>
