--- a/BootWeb2/src/main/resources/templates/index.html
+++ b/BootWeb2/src/main/resources/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
@@ -9,8 +10,8 @@
 		<h2>BootWeb2 main page</h2>
 	</div>
 	
-	<a th:href="@{/getBoardList}">게시판 바로가기</a>
-	
+	<a th:href="@{/getBoardList}">게시판 바로가기</a>&nbsp;&nbsp;
+	<p><a th:href="@{/login}">로그인</a></p>
 	<div class="main_img_container">
 		<img src="/static/images/bg2.jpg" class="main_img" id="pic">	
 	</div>	
