--- a/BootWeb2/src/main/resources/templates/insertBoard.html
+++ b/BootWeb2/src/main/resources/templates/insertBoard.html
@@ -16,7 +16,7 @@
 					</tr>
 					<tr>
 						<td>작성자</td>
-						<td><input type="text" name="writer"></td>
+						<td><input type="text" name="writer" th:value="${session['member'].name}"></td>
 					</tr>
 					<tr>
 						<td>내용</td>
