--- a/BootWeb2/src/main/resources/templates/getBoard.html
+++ b/BootWeb2/src/main/resources/templates/getBoard.html
@@ -35,7 +35,9 @@
 					<tr>
 						<td colspan="2" align="center">
 						<button type="submit">수정</button>
-						<a th:href="@{/deleteBoard(seq=${board.seq})}" onclick='return confirm("정말로 삭제 하시겠습니까?")'><button type="button">삭제</button></a>
+						<!-- ROLE_ADMIN인 경우만 글삭제 보임 -->
+						<a th:if="${session['member'].role == 'ROLE_ADMIN'}"
+						   th:href="@{/deleteBoard(seq=${board.seq})}" onclick='return confirm("정말로 삭제 하시겠습니까?")'><button type="button">삭제</button></a>
 						<a th:href="@{/getBoardList}"><button type="button">목록</button></a></td>
 					</tr>			
 				</tbody>
