--- a/BootWeb2/src/main/resources/templates/getBoardList.html
+++ b/BootWeb2/src/main/resources/templates/getBoardList.html
@@ -7,6 +7,8 @@
 <body>
 	<div id="container">
 		<h2>게시글 목록</h2>
+		<h3><font color="red" th:text="${session['member'].name}"></font>님 게시판 입장을 환영합니다.</h3>
+		<p><a th:href="@{/logout}">LOG_OUT</a></p>
 		<table class="tbl_list">
 			<thead>
 				<tr>
