--- a/BootWeb2/src/main/resources/static/css/style.css
+++ b/BootWeb2/src/main/resources/static/css/style.css
@@ -19,6 +19,9 @@ h2{padding-top: 20px;}
 /* main */
 .main_img_container{margin:0 auto; text-align: center}
 .main_img{width:300px; height: 300px; border-radius: 10px}
+.exception{text-align: left; border-collapse: collapse;}
+.exception th{background: pink; padding: 10px;}
+.exception{margin-top: 10px}
 
 /* getBoard Ω∫≈∏¿œ */
 .tbl_view{width: 700px; margin: 0 auto;}
