--- a/BootWeb2/src/main/resources/templates/profile.html
+++ b/BootWeb2/src/main/resources/templates/profile.html
@@ -10,21 +10,28 @@
 	<div th:replace="menu.html::nav"></div>
 
 	<div id="container">
-		<h2>로그인</h2>
-		<form th:action="@{login}" method="post">
+		<h2>나의 정보</h2>
+		<form th:action="@{updateMember}" method="post">
+			<!-- <input type="hidden" name="id" th:value="${member.id }"> -->
 			<table class="tbl_login">
 				<tbody>
 					<tr>
 						<td th:text="아이디"></td>
-						<td><input type="text" name="id"></td>
+						<td><input type="text" name="id" th:value="${member.id}"></td>
 					</tr>
 					<tr>
 						<td th:text="비밀번호"></td>
-						<td><input type="password" name="password"></td>
+						<td><input type="password" name="password" th:value="${member.password}"></td>
+					</tr>
+					<tr>
+						<td th:text="이름"></td>
+						<td><input type="text" name="name" th:value="${member.name}"></td>
 					</tr>
 					<tr>
 						<td colspan="2" align="center">
-							<button type="submit">로그인</button>
+							<button type="submit">수정</button>						
+							<button type="reset">취소</button>
+							<!-- <button type="button">탈퇴</button> -->
 						</td>
 					</tr>
 				</tbody>
