--- a/BootWeb2/src/main/resources/templates/memberView.html
+++ b/BootWeb2/src/main/resources/templates/memberView.html
@@ -11,8 +11,7 @@
 
 	<div id="container">
 		<h2>나의 정보</h2>
-		<form th:action="@{updateMember}" method="post">
-			<!-- <input type="hidden" name="id" th:value="${member.id }"> -->
+		<form th:action="@{/signup}" method="post">
 			<table class="tbl_login">
 				<tbody>
 					<tr>
@@ -24,14 +23,17 @@
 						<td><input type="password" name="password" th:value="${member.password}"></td>
 					</tr>
 					<tr>
+						<td th:text="비밀번호확인"></td>
+						<td><input type="password" name="password_confirm" th:value="${member.password}"></td>
+					</tr>
+					<tr>
 						<td th:text="이름"></td>
 						<td><input type="text" name="name" th:value="${member.name}"></td>
 					</tr>
 					<tr>
 						<td colspan="2" align="center">
-							<button type="submit">수정</button>						
-							<button type="reset">취소</button>
-							<!-- <button type="button">탈퇴</button> -->
+							<button type="submit">수정</button>
+							<button type="button">탈퇴</button>
 						</td>
 					</tr>
 				</tbody>
