--- a/BootWeb2/src/main/resources/templates/memberView.html
+++ b/BootWeb2/src/main/resources/templates/memberView.html
@@ -4,6 +4,19 @@
 <meta charset="UTF-8">
 <title>메인 페이지</title>
 <link rel="stylesheet" href="/static/css/style.css">
+<script type="text/javascript">
+	function checkForm(){
+		//alert("test");
+		let pwd1 = document.getElementById("password");
+		let pwd2 = document.getElementById("password_confirm");
+		
+		if(pwd1.value != pwd2.value){
+			alert("비밀번호를 동일하게 입력해주세요");
+			password_confirm.select();
+			return false;
+		}
+	} 
+</script>
 </head>
 <body>
 	<!-- menu.html의 nav 태그 삽입 -->
@@ -11,7 +24,8 @@
 
 	<div id="container">
 		<h2>나의 정보</h2>
-		<form th:action="@{/signup}" method="post">
+		<form th:action="@{/updateMember}" method="post"
+			  th:onsubmit="return checkForm()">
 			<table class="tbl_login">
 				<tbody>
 					<tr>
@@ -20,11 +34,13 @@
 					</tr>
 					<tr>
 						<td th:text="비밀번호"></td>
-						<td><input type="password" name="password" th:value="${member.password}"></td>
+						<td><input type="password" name="password" th:value="${member.password}"
+								   id="password"></td>
 					</tr>
 					<tr>
 						<td th:text="비밀번호확인"></td>
-						<td><input type="password" name="password_confirm" th:value="${member.password}"></td>
+						<td><input type="password" name="password_confirm" th:value="${member.password}"
+								   id="password_confirm"></td>
 					</tr>
 					<tr>
 						<td th:text="이름"></td>
@@ -33,7 +49,10 @@
 					<tr>
 						<td colspan="2" align="center">
 							<button type="submit">수정</button>
-							<button type="button">탈퇴</button>
+							<a th:href="@{/deleteMember(id=${member.id})}"
+								th:onclick="return confirm('정말로 삭제하시겠습니까?')">
+								<button type="button">탈퇴</button>
+							</a>
 						</td>
 					</tr>
 				</tbody>
