--- a/BootWeb2/src/main/resources/templates/signup.html
+++ b/BootWeb2/src/main/resources/templates/signup.html
@@ -16,15 +16,15 @@
 				<tbody>
 					<tr>
 						<td th:text="아이디"></td>
-						<td><input type="text" name="id"></td>
+						<td><input type="text" name="id" placeholder="ID"></td>
 					</tr>
 					<tr>
 						<td th:text="비밀번호"></td>
-						<td><input type="password" name="password"></td>
+						<td><input type="password" name="password" placeholder="PASSWORD"></td>
 					</tr>
 					<tr>
 						<td th:text="비밀번호확인"></td>
-						<td><input type="password" name="password_confirm"></td>
+						<td><input type="password" name="password_confirm" placeholder="PASSWORD_CONFIRM"></td>
 					</tr>
 					<tr>
 						<td th:text="이름"></td>
