--- a/HiWeb1/src/main/resources/templates/index.html
+++ b/HiWeb1/src/main/resources/templates/index.html
@@ -11,7 +11,8 @@
 		<img src="/static/images/coffee-blue.jpg" alt="커피 사진">
 		<p>
 			<a th:href="@{board/getBoardList}">글 목록</a>&nbsp;&nbsp;
-			<a th:href="@{system/login}">로그인</a>
+			<a th:href="@{/system/login}">로그인</a>&nbsp;&nbsp;
+			<a th:href="@{/system/signup}">회원가입</a>
 		<p>
 	</div>
 
