--- a/HiWeb1/src/main/resources/templates/board/getBoard.html
+++ b/HiWeb1/src/main/resources/templates/board/getBoard.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>상세 보기</title>
-	<link rel="stylesheet" href="/static/css/style.css">
+	<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 	<div id="container">
 		<h2>글 상세 보기</h2>
 		<form th:action="@{/board/updateBoard}" method="post">
-			<!-- 수정시에 기본키 필드 히든으로 보냄 -->
+			<!-- 수정시에 기본키 필드 히든으로 보냄  -->
 			<input type="hidden" name="seq" th:value="${board.seq}">
 			<table class="tbl_view">
 				<tbody>
@@ -41,11 +41,9 @@
 							<button type="submit">글수정</button>
 							<a th:href="@{/board/deleteBoard(seq=${board.seq})}"
 							   th:onclick="return confirm('해당 게시글을 정말로 삭제하시겠습니까?')">
-								<button type="button">글삭제</button>
-							</a>
+								<button type="button">글삭제</button></a>
 							<a th:href="@{/board/getBoardList}">
 								<button type="button">글목록</button></a>
-							
 						</td>
 					</tr>
 				</tbody>
