--- a/HiWeb1/src/main/resources/templates/system/accessDenied.html
+++ b/HiWeb1/src/main/resources/templates/system/accessDenied.html
@@ -3,13 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>메인 페이지</title>
-	<link rel="stylesheet" href="/static/css/style.css">
+	<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 	<div id="container">
-		<h2>Access Denied!<br>접근 권한이 없습니다</h2>
-		<h4>다시 로그인을 원하시면 <a th:href="@{/system/login}" style="color: blue">여기(클릭)</a></h4>
+		<h2>페이지에 대한 접근 권한이 없습니다.</h2>
+		<h3>다시 로그인을 원하시면 <a th:href="@{/system/login}">여기(클릭)</a></h3>
 	</div>
-
 </body>
 </html>
