--- a/HiWeb1/src/main/resources/templates/system/login.html
+++ b/HiWeb1/src/main/resources/templates/system/login.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>로그인</title>
-	<link rel="stylesheet" href="/static/css/style.css">
+	<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 	<div id="container">
@@ -24,7 +24,7 @@
 					</td>
 				</tr>
 			</table>
-			<input type="hidden" name="{_csrf.parameterName}" value="${_csrf.token}">
+			<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
 		</form>
 	</div>
 </body>
