--- a/GuestBook/src/main/resources/templates/main.html
+++ b/GuestBook/src/main/resources/templates/main.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8">
 	
 	<div layout:fragment="content" class="content">
-		<h1>메인 페이지입니다.</h1>
+		<h1>This is <span style="color:#999">GuestBook's</span> main page</h1>
+		<p>페이지처리와 검색구현을 위한 프로젝트</p>
 	</div>
 </html>
